--- a/glossary.tex
+++ b/glossary.tex
@@ -63,6 +63,10 @@
 \newacronym{FC}{FC}{Flight Controller}
 \newacronym{USB}{USB}{Universal Serial Bus}
 
+\newacronym{ZV}{ZV}{Zero Vibration}
+\newacronym{NZV}{NZV}{Negative Zero Vibration}
+\newacronym{EI}{EI}{Extra Insensitive}
+
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
