--- a/glossary.tex
+++ b/glossary.tex
@@ -67,6 +67,8 @@
 \newacronym{NZV}{NZV}{Negative Zero Vibration}
 \newacronym{EI}{EI}{Extra Insensitive}
 
+\newacronym{RL}{RL}{Reinforcement Learning}
+
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
