--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -129,8 +129,11 @@
 \captionsetup[algorithm]{labelfont={bf,sf},font=small,labelsep=colon}
 
 % Bibliography
-\usepackage[nocompress]{cite}  % automatically reorder inline citations
-\bibliographystyle{IEEEtran}
+% \usepackage[nocompress]{cite}  % automatically reorder inline citations
+% \bibliographystyle{IEEEtran}
+\usepackage[numbers]{natbib}  % automatically reorder inline citations
+\bibliographystyle{IEEEtranN}
+
 % \usepackage[hyphens]{url}
 
 % Fix titlesec issue
