--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -121,14 +121,15 @@
         It was shown in simulation that a notch filter attenuated the payload oscillations to near swing free motion even with large parameter estimation errors \cite{Slabber2020}.
 
         \paragraph 
-        Several other open-loop methods have been successfully applied for effective suspended payload transportation.
+        Several other trajectory generation methods have been successfully applied for effective suspended payload transportation.
         \citet{Zeng2019} and \citet{Tang2015b} applied differential flatness based trajectory planning methods for multirotors in obstacle-filled environments.
         Instead of only considering swing-reduction of the suspended payloads, these studies consider specific payload trajectories to avoid obstacles during aggressive motion.
         \citet{Xian2020} proposed an efficient online trajectory planning method without iterative optimizations.
-        \citet{Xian2020} also verified the swing-reduction control performance with real-time experimental results.
-
-        % switch to natbib to use citeauthor.
-
+        The swing-reduction performance of this method was also verified with experimental results.
+        % ?? Palunko et al. successfully applied dynamic programming to solve swing-free trajectories for quadrotors [14], [15]. However, dynamic programming requires that the dynamics of the system are known ahead of time, and is sensitive to the accuracy of the model
+        \citet{Faust2013} implemented a \gls{RL} method for generating trajectories with minimal payload oscillations.
+        This method provides sufficient criteria to allow the learned policy to be transferred to a variety of different models, starting positions, and trajectories.
+        Furthermore, this \gls{RL} trajectory generation method was verified with simulation and experimental results.
         
         reinforcement learning
 
