--- a/glossary.tex
+++ b/glossary.tex
@@ -68,6 +68,8 @@
 \newacronym{EI}{EI}{Extra Insensitive}
 
 \newacronym{RL}{RL}{Reinforcement Learning}
+\newacronym{RRT}{RRT}{Rapidly-exploring Random Tree}
+\newacronym{BFBEL}{BFBEL}{Bidirectional Fuzzy Brain Emotional Learning}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
