--- a/glossary.tex
+++ b/glossary.tex
@@ -70,6 +70,7 @@
 \newacronym{RL}{RL}{Reinforcement Learning}
 \newacronym{RRT}{RRT}{Rapidly-exploring Random Tree}
 \newacronym{BFBEL}{BFBEL}{Bidirectional Fuzzy Brain Emotional Learning}
+\newacronym{H-inf}{$\mathscr{H}_\infty$}{H-Infinity}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
